<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeekViewActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/title_bar"
        android:fontFamily="@font/poppins_medium"
        android:text="Event Dashboard"
        android:textAlignment="center"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/w_previousWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/material_on_surface_stroke"
            android:text="@string/left_arrow"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/w_MonthYearTv"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/july"
            android:textColor="#c2c2c2"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/w_nextWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/material_on_surface_stroke"
            android:text="@string/right_arrow"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_sun"
            android:textSize="16sp"
            android:textColor="#b2b2b2"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:textSize="16sp"
            android:textColor="#b2b2b2"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:textSize="16sp"
            android:textColor="#b2b2b2"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            android:textSize="16sp"
            android:textColor="#b2b2b2"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:textSize="16sp"
            android:textColor="#b2b2b2"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textColor="#b2b2b2"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:textSize="16sp"
            android:textColor="#b2b2b2"
            android:layout_weight="1"
            android:textAlignment="center"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/w_calanderRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />

    <Button
        android:id="@+id/newEvent"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/material_on_surface_stroke"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/new_event"
        android:textAlignment="center"
        android:textColor="#54d6ff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/eventList"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5" />

</LinearLayout>