<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login"
    android:backgroundTint="#ffffff">


    <ImageView
        android:layout_width="103dp"
        android:layout_height="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="42sp" />
    <TextView
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/we_are_glad_you_re_enjoying_journaling"
        android:textColor="#cdcdcd"
        android:textSize="14sp" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/LoginEmail"
        android:layout_width="396dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/no_fill_email_and_search_bar"
        android:hint="@string/email"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/LoginPassword"
        android:layout_width="396dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/no_fill_email_and_search_bar"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/ButLogin"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="#fcb5b9"
        android:fontFamily="sans-serif"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#989898"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="289dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/or" />

    <Button
        android:id="@+id/RedirectRegister"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="#ffd478"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="24sp" />

</LinearLayout>