<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingskFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:background="@drawable/title_bar"
        android:backgroundTint="#ffc5e9"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/cap_profile"
        android:textAlignment="center"
        android:textSize="40sp" />


    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/pink_profile_photo_ring"
        android:layout_marginTop="150dp"/>

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:backgroundTint="#f2f2f2"
        android:background="@drawable/pink_profile_photo_ring"
        android:layout_marginTop="160dp"/>

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="170dp"
        android:background="@drawable/blank_profile_image_circle"
        android:gravity="center" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="290dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/cap_profile"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/user_disc"
        android:layout_width="270dp"
        android:layout_height="49dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="310dp"
        android:textColor="#939393"
        android:fontFamily="@font/poppins_light"
        android:text="@string/disc"
        android:textAlignment="center"
        android:textSize="12sp" />


    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/profile_topper_crown_icon"
        android:gravity="center"/>

    <Button
        android:id="@+id/user_edit"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="410dp"
        android:backgroundTint="#ffe0d0"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/darkMode"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="470dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/dark_mode"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <Button
        android:id="@+id/logout"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="650dp"
        android:backgroundTint="#cccccc"
        android:gravity="center"
        android:onClick="tfinish"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

</FrameLayout>
